[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/timer/Timer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/set_time/SetTime.gd" type="Script" id=2]

[node name="SetTime" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -520.0
script = ExtResource( 2 )

[node name="PosLabel" type="Label" parent="."]
margin_top = 33.0
margin_right = 338.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "START: "
align = 1

[node name="Timer" parent="." instance=ExtResource( 1 )]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 80.0
size_flags_horizontal = 3
alignment = 1

[node name="SetTime" type="Button" parent="."]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 80.0
size_flags_horizontal = 3
toggle_mode = true
text = "Set Start Time"

[connection signal="toggled" from="SetTime" to="." method="_on_SetTime_toggled"]
